# xrns-rs

./: Cargo.toml  Song.xml  test.xrns
crates/xrns-derive/: Cargo.toml
crates/xrns-derive/src/: lib.rs
crates/xrns-rs/: Cargo.toml
crates/xrns-rs/src/: effect.rs  lib.rs  pitch.rs
examples/: test.rs
src/: effect.rs  lib.rs  note.rs  panning.rs  pitch.rs  song.rs  volume.rs
src/note/: from_song.rs
