[package]
name = "xrns-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["add", "add_assign", "display", "error", "from", "from_str", "mul", "mul_assign", "not"] }
indexmap = "2.4.0"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0.208", features = ["derive"] }
zip = "2.1.6"
